--- a/src/style.css
+++ b/src/style.css
@@ -58,3 +58,20 @@ h1 {
     background-color: #f9f9f9;
   }
 }
+#frameViewer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0; /* background */
+  pointer-events: none;
+}
+
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1; /* above image */
+}
