--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  background-size: cover;
   z-index: 0; /* background */
   pointer-events: none;
 }
